make form__check-input active toggle global, rename form__check-*

--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -1433,10 +1433,10 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                       type="checkbox"
                                                     />
                                                     <span
-                                                      class="explore-filter-menu__list-checkbox checkbox-option"
+                                                      class="form__check-icon-wrapper checkbox-option"
                                                       data-checkbox="true"
                                                     >
-                                                      <span class="_1oj8hra">
+                                                      <span class="form__check-icon">
                                                         <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
                                                         <path fill="none" d="m4 16.5 8 8 16-16"></path>
                                                         </svg>
@@ -1533,10 +1533,10 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                       type="checkbox"
                                                     />
                                                     <span
-                                                      class="explore-filter-menu__list-checkbox checkbox-option"
+                                                      class="form__check-icon-wrapper checkbox-option"
                                                       data-checkbox="true"
                                                     >
-                                                      <span class="_1oj8hra">
+                                                      <span class="form__check-icon">
                                                         <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
                                                         <path fill="none" d="m4 16.5 8 8 16-16"></path>
                                                         </svg>
@@ -1594,10 +1594,10 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                       type="checkbox"
                                                     />
                                                     <span
-                                                      class="explore-filter-menu__list-checkbox checkbox-option"
+                                                      class="form__check-icon-wrapper checkbox-option"
                                                       data-checkbox="true"
                                                     >
-                                                      <span class="_1oj8hra">
+                                                      <span class="form__check-icon">
                                                         <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
                                                         <path fill="none" d="m4 16.5 8 8 16-16"></path>
                                                         </svg>
@@ -1654,10 +1654,10 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                       type="checkbox"
                                                     />
                                                     <span
-                                                      class="explore-filter-menu__list-checkbox checkbox-option"
+                                                      class="form__check-icon-wrapper checkbox-option"
                                                       data-checkbox="true"
                                                     >
-                                                      <span class="_1oj8hra">
+                                                      <span class="form__check-icon">
                                                         <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
                                                         <path fill="none" d="m4 16.5 8 8 16-16"></path>
                                                         </svg>
@@ -2000,10 +2000,10 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                       type="checkbox"
                                                     />
                                                     <span
-                                                      class="explore-filter-menu__list-checkbox"
+                                                      class="form__check-icon-wrapper"
                                                       data-checkbox="true"
                                                     >
-                                                      <span class="_1oj8hra">
+                                                      <span class="form__check-icon">
                                                         <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
                                                         <path fill="none" d="m4 16.5 8 8 16-16"></path>
                                                         </svg>
