--- a/resource-center/resources.html
+++ b/resource-center/resources.html
@@ -4311,8 +4311,8 @@
                           <div class="inline-block" style="margin-right: 16px;">
                             <span class="_10ndlvp">
                               <input id="filter-checkbox-ARTICLES" name="filter-checkbox-ARTICLES" class="checkbox__input" type="checkbox" value="ARTICLES">
-                              <span class="_1v5cvwv4" data-checkbox="true">
-                                <span class="_1oj8hra">
+                              <span class="form__check-icon-wrapper--active" data-checkbox="true">
+                                <span class="form__check-icon">
                                   <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
                                     <path fill="none" d="m4 16.5 8 8 16-16"></path>
                                   </svg>
