--- a/edit/what.html
+++ b/edit/what.html
@@ -3916,8 +3916,8 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                         <div class="_7ytxmo">
                          <span class="_10ndlvp">
                           <input id="Tag:622-row-checkbox" class="_smt4n2a" type="checkbox" checked="" />
-                          <span class="_1v5cvwv4" data-checkbox="true">
-                           <span class="_1oj8hra">
+                          <span class="form__check-icon-wrapper--active" data-checkbox="true">
+                           <span class="form__check-icon">
                             <svg
                              viewBox="0 0 32 32"
                              xmlns="http://www.w3.org/2000/svg"
