--- a/help/searching-for-stays.html
+++ b/help/searching-for-stays.html
@@ -768,8 +768,8 @@
                                                 class="_10ndlvp"><input
                                                   id="feedback-secondary-options-CheckboxFieldGroup-instructions_did_not_work"
                                                   name="instructions_did_not_work" class="checkbox__input"
-                                                  type="checkbox" /><span class="_1v5cvwv4" data-checkbox="true"><span
-                                                    class="_1oj8hra"><svg viewBox="0 0 32 32"
+                                                  type="checkbox" /><span class="form__check-icon-wrapper--active" data-checkbox="true"><span
+                                                    class="form__check-icon"><svg viewBox="0 0 32 32"
                                                       xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                       role="presentation" focusable="false" style="
                                                           display: block;
