Add messages inbox filter dropdown, Rename inbox-container__inbox-btn-filter

--- a/loaders/messages-loader.html
+++ b/loaders/messages-loader.html
@@ -270,7 +270,7 @@
                                       <div class=" dir dir-ltr" id="filter_chip-DLS-chipGroup-label"></div><button
                                         data-testid="messaging.filtermenu"
                                         aria-label="Filter conversations. Current filter: All conversations"
-                                        class="_1arxx82" aria-pressed="false" type="button"><svg viewBox="0 0 32 32"
+                                        class="inbox-container__inbox-btn-filter" aria-pressed="false" type="button"><svg viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                           focusable="false"
                                           style="display: block; height: 16px; width: 16px; fill: rgb(34, 34, 34);">
@@ -1746,7 +1746,7 @@
                                     <div class=" dir dir-ltr" id="filter_chip-DLS-chipGroup-label"></div><button
                                       data-testid="messaging.filtermenu"
                                       aria-label="Filter conversations. Current filter: All conversations"
-                                      class="_1arxx82" aria-pressed="false" type="button"><svg viewBox="0 0 32 32"
+                                      class="inbox-container__inbox-btn-filter" aria-pressed="false" type="button"><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
                                         style="display: block; height: 16px; width: 16px; fill: rgb(34, 34, 34);">
