--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -266,9 +266,10 @@
                                     <div class=" dir dir-ltr" role="group" id="filter_chip"
                                       aria-labelledby="filter_chip-DLS-chipGroup-label">
                                       <div class=" dir dir-ltr" id="filter_chip-DLS-chipGroup-label"></div><button
+                                        id="filter-menu"
                                         data-testid="messaging.filtermenu"
                                         aria-label="Filter conversations. Current filter: All conversations"
-                                        class="_1arxx82" aria-pressed="false" type="button"><svg viewBox="0 0 32 32"
+                                        class="inbox-container__inbox-btn-filter" aria-pressed="false" type="button"><svg viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                           focusable="false"
                                           style="display: block; height: 16px; width: 16px; fill: rgb(34, 34, 34);">
@@ -279,6 +280,32 @@
                                             style="display: block; height: 16px; width: 16px; fill: rgb(34, 34, 34);">
                                             <path d="M14 25h4v4h-4zm-4-3h12v-4H10zm-4-7h20v-4H6zM2 4v4h28V4z"></path>
                                           </svg></span></button>
+                                    </div>
+                                    <div class="inbox-container__inbox-menu-filter hidden" id="filter-menu-dropdown" tabindex="-1">
+                                      <div class="inbox-container__menu-filter-wrapper">
+                                        <button type="button" class="inbox-container__menu-filter-btn"
+                                          aria-label="All conversations in your guest inbox; Selected Filter" theme="[object Object]">
+                                          <div class="flex-1-auto">
+                                            All conversations
+                                          </div>
+                                        </button>
+                                      </div>
+                                      <div>
+                                        <button type="button" class="inbox-container__menu-filter-btn"
+                                          aria-label="Archived conversations in your guest inbox (0 conversations)" theme="[object Object]">
+                                          <div class="flex-1-auto">
+                                            Archived conversations (0)
+                                          </div>
+                                        </button>
+                                      </div>
+                                      <div>
+                                        <button type="button" class="inbox-container__menu-filter-btn"
+                                          aria-label="Unread conversations in your guest inbox (1 conversation)" theme="[object Object]">
+                                          <div class="flex-1-auto">
+                                            Unread conversations (1)
+                                          </div>
+                                        </button>
+                                      </div>
                                     </div>
                                   </div>
                                 </div>
@@ -2084,9 +2111,10 @@
                                   <div class=" dir dir-ltr" role="group" id="filter_chip"
                                     aria-labelledby="filter_chip-DLS-chipGroup-label">
                                     <div class=" dir dir-ltr" id="filter_chip-DLS-chipGroup-label"></div><button
+                                      id="filter-menu"
                                       data-testid="messaging.filtermenu"
                                       aria-label="Filter conversations. Current filter: All conversations"
-                                      class="_1arxx82" aria-pressed="false" type="button"><svg viewBox="0 0 32 32"
+                                      class="inbox-container__inbox-btn-filter" aria-pressed="false" type="button"><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
                                         style="display: block; height: 16px; width: 16px; fill: rgb(34, 34, 34);">
@@ -2097,6 +2125,32 @@
                                           style="display: block; height: 16px; width: 16px; fill: rgb(34, 34, 34);">
                                           <path d="M14 25h4v4h-4zm-4-3h12v-4H10zm-4-7h20v-4H6zM2 4v4h28V4z"></path>
                                         </svg></span></button>
+                                  </div>
+                                  <div class="inbox-container__inbox-menu-filter hidden" id="filter-menu-dropdown" tabindex="-1">
+                                    <div class="inbox-container__menu-filter-wrapper">
+                                      <button type="button" class="inbox-container__menu-filter-btn"
+                                        aria-label="All conversations in your guest inbox; Selected Filter" theme="[object Object]">
+                                        <div class="flex-1-auto">
+                                          All conversations
+                                        </div>
+                                      </button>
+                                    </div>
+                                    <div>
+                                      <button type="button" class="inbox-container__menu-filter-btn"
+                                        aria-label="Archived conversations in your guest inbox (0 conversations)" theme="[object Object]">
+                                        <div class="flex-1-auto">
+                                          Archived conversations (0)
+                                        </div>
+                                      </button>
+                                    </div>
+                                    <div>
+                                      <button type="button" class="inbox-container__menu-filter-btn"
+                                        aria-label="Unread conversations in your guest inbox (1 conversation)" theme="[object Object]">
+                                        <div class="flex-1-auto">
+                                          Unread conversations (1)
+                                        </div>
+                                      </button>
+                                    </div>
                                   </div>
                                 </div>
                               </div>
