fix filter menu dropdown not showing on desktop

--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -262,7 +262,7 @@
                                       <div class="_cpx90i1"></div>
                                     </div>
                                   </div>
-                                  <div>
+                                  <div id="filter-menu-wrapper">
                                     <div class=" dir dir-ltr" role="group" id="filter_chip"
                                       aria-labelledby="filter_chip-DLS-chipGroup-label">
                                       <div class=" dir dir-ltr" id="filter_chip-DLS-chipGroup-label"></div><button
@@ -2107,7 +2107,7 @@
                                         d="m14.5 2.5a1 1 0 0 1 1 1v9a1 1 0 0 1 -1 1h-13a1 1 0 0 1 -1-1v-9a1 1 0 0 1 1-1zm-4 7.375h-5v1.25h5zm1.25-2.375a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5zm-2.5 0a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5zm-2.5 0a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5zm-2.5 0a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5zm8.75-2.25a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5zm-2.5 0a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5zm-2.5 0a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5zm-2.5 0a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5zm-2.5 0a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5z">
                                       </path>
                                     </svg></span></button>
-                                <div>
+                                <div id="filter-menu-wrapper">
                                   <div class=" dir dir-ltr" role="group" id="filter_chip"
                                     aria-labelledby="filter_chip-DLS-chipGroup-label">
                                     <div class=" dir dir-ltr" id="filter_chip-DLS-chipGroup-label"></div><button
