move checkbox toggle to work globally

--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -3313,10 +3313,10 @@
                                             ><input
                                               id="email-signupuser_profile_info[receive_promotional_email]"
                                               name="email-signupuser_profile_info[receive_promotional_email]"
-                                              class="form__check-input--checked"
+                                              class="form__check-input"
                                               type="checkbox"
                                               value="1" /><span
-                                              class="form__check-input-icon-wrapper"
+                                              class="form__check-icon-wrapper"
                                               data-checkbox="true"
                                               ><span class="form__check-input-icon"
                                                 ><svg
@@ -6683,10 +6683,10 @@
                                           ><input
                                             id="email-signupuser_profile_info[receive_promotional_email]"
                                             name="email-signupuser_profile_info[receive_promotional_email]"
-                                            class="form__check-input--checked"
+                                            class="form__check-input"
                                             type="checkbox"
                                             value="1" /><span
-                                            class="form__check-input-icon-wrapper"
+                                            class="form__check-icon-wrapper"
                                             data-checkbox="true"
                                             ><span class="form__check-input-icon"
                                               ><svg
