--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -1107,5 +1107,5 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
     </div>
     
   </body>
-  <script src="../assets/js/pages/become-a-host.js" defer></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/become-a-host.js" defer></script>
 </html>
