--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -555,9 +555,9 @@
                                         name="new-listing-promotion"
                                         aria-labelledby="new-listing-promotion-row-title"
                                         id="new-listing-promotion-row-checkbox"
-                                        class="form__check-input--checked"
+                                        class="form__check-input"
                                         checked="" /><span
-                                        class="form__check-input-icon-wrapper"
+                                        class="form__check-icon-wrapper"
                                         data-checkbox="true"
                                         ><span class="form__check-input-icon"
                                           ><svg
@@ -1285,5 +1285,5 @@
      </div>
     
   </body>
-  <script src="../assets/js/pages/become-a-host.js" defer></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/become-a-host.js" defer></script>
 </html>
