--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -1099,5 +1099,5 @@ Cheerful private villa with pool</textarea
     </div>
 
   </body>
-  <script src="../assets/js/pages/become-a-host.js" defer></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/become-a-host.js" defer></script>
 </html>
