--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -19065,12 +19065,12 @@
                                                       <input
                                                         name="Art and culture"
                                                         id="filterItem-1036292610381492749-checkbox-kg_or_tags-Tag:1346-row-checkbox"
-                                                        class="form__check-input--checked"
+                                                        class="form__check-input"
                                                         type="checkbox"
                                                         checked=""
                                                       />
                                                       <span
-                                                        class="form__check-input-icon-wrapper"
+                                                        class="form__check-icon-wrapper"
                                                         data-checkbox="true"
                                                       >
                                                         <span
