--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -232,9 +232,9 @@
                                           name="SURVEILLANCE"
                                           aria-labelledby="SURVEILLANCE-row-title"
                                           id="SURVEILLANCE-row-checkbox"
-                                          class="form__check-input--checked"
+                                          class="form__check-input"
                                           checked="" /><span
-                                          class="form__check-input-icon-wrapper"
+                                          class="form__check-icon-wrapper"
                                           data-checkbox="true"
                                           ><span class="form__check-input-icon"
                                             ><svg
@@ -1214,5 +1214,5 @@
      </div>
 
   </body>
-  <script src="../assets/js/pages/become-a-host.js" defer></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/become-a-host.js" defer></script>
 </html>
