--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -1975,5 +1975,5 @@
     
     
   </body>
-  <script src="../assets/js/pages/become-a-host.js" defer></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/become-a-host.js" defer></script>
 </html>
