--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -1832,5 +1832,5 @@
     </div>
     
   </body>
-  <script src="../assets/js/pages/become-a-host.js" defer></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/become-a-host.js" defer></script>
 </html>
