--- a/become-a-host/welcome.html
+++ b/become-a-host/welcome.html
@@ -1159,5 +1159,5 @@
 
   </body>
   <script src="../assets/js/pages/become-a-host-welcome.js" defer></script>
-  <script src="../assets/js/pages/become-a-host.js" defer></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/become-a-host.js" defer></script>
 </html>
