--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1752,9 +1752,9 @@
                       data-testid="additional-language-en"
                       id="checkbox-en"
                       name="en"
-                      class="form__check-input--checked"
+                      class="form__check-input"
                       type="checkbox"
-                      checked="" /><span class="form__check-input-icon-wrapper" data-checkbox="true"
+                      checked="" /><span class="form__check-icon-wrapper" data-checkbox="true"
                       ><span class="form__check-input-icon"
                         ><svg
                           viewBox="0 0 32 32"
