fix become a host form__switch

--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -763,7 +763,7 @@
                                         </div>
                                        </div>
                                        <div>
-                                        <button aria-checked="false" aria-labelledby="pin-type-toggle-label" aria-describedby="pin-type-toggle-description" role="switch" type="button" class="form__switch"><div class="_vr1ztso"></div></button>
+                                        <button aria-checked="false" aria-labelledby="pin-type-toggle-label" aria-describedby="pin-type-toggle-description" role="switch" type="button" class="form__switch"><div class="form__switch-toggle"></div></button>
                                        </div>
                                       </div>
                                       <div class="_9ngcy9">
