--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -11117,7 +11117,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                           </div>
                                                           <div class="_g8xvp5"><button aria-checked="false" aria-labelledby="privateBookingToggleTitle" role="switch"
                                                               type="button" class="form__switch">
-                                                              <div class="_vr1ztso"></div>
+                                                              <div class="form__switch-toggle"></div>
                                                             </button></div>
                                                         </div>
                                                       </div>
