make radio buttons work globally

--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -2513,5 +2513,5 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
       <iframe style="display: none"></iframe>
     </div>
   </body>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
