--- a/edit/bring.html
+++ b/edit/bring.html
@@ -1569,5 +1569,5 @@
        </div>
     </div>
   </body>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
