--- a/edit/photos.html
+++ b/edit/photos.html
@@ -5022,7 +5022,7 @@
    </div>
 
   <script src="../assets/js/pages/photos.js"></script>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
 </body>
 
 </html>
