--- a/edit/title.html
+++ b/edit/title.html
@@ -847,5 +847,5 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
      
     
   </body>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
