--- a/edit/what.html
+++ b/edit/what.html
@@ -1348,7 +1348,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                               </span>
                                             </span>
                                           </legend>
-                                          <div>
+                                          <div class="radio-buttons-wrapper">
                                             <div
                                               id="ONLINE_QUESTION-0-radio-row"
                                               aria-disabled="false"
@@ -4200,5 +4200,5 @@ Join me in this fun and easy cooking experience where you will learn techniques 
      </div>
      
   </body>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
