--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -27755,7 +27755,7 @@
                 <div class="_zu3isv">
                   <div class="_amlvih">This won’t be shared with the Host.</div>
                 </div>
-                <div class="_mmcfcd">
+                <div class="_mmcfcd radio-buttons-wrapper">
                   <div id="inaccurate_incorrect" aria-disabled="false" class="r1pyaok7 dir dir-ltr">
                     <label for="inaccurate_incorrect-row-radio-button" class="cursor-pointer">
                       <div class="flex">
