--- a/submission/about.html
+++ b/submission/about.html
@@ -1292,6 +1292,6 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
       <iframe style="display: none"></iframe>
     </div>
   </body>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
 
