--- a/submission/bring.html
+++ b/submission/bring.html
@@ -1306,5 +1306,5 @@
        </div>
     </div>
   </body>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
