--- a/submission/review.html
+++ b/submission/review.html
@@ -1645,5 +1645,5 @@
     </div>
 
     </body>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
