--- a/submission/theme.html
+++ b/submission/theme.html
@@ -1815,5 +1815,5 @@
       crossorigin="anonymous"
     ></script>
   </body>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
