--- a/submission/title.html
+++ b/submission/title.html
@@ -1316,5 +1316,5 @@ Lorem Ipsum is simply dummy text of the printing</textarea
     </div>
      
   </body>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
