--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -4032,6 +4032,6 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
      </div>
 
   </body>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
 
