--- a/account/profile.html
+++ b/account/profile.html
@@ -3356,7 +3356,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                 <div class="_zu3isv">
                   <div class="_amlvih">This won’t be shared with the Host.</div>
                 </div>
-                <div class="_mmcfcd">
+                <div class="_mmcfcd radio-buttons-wrapper">
                   <div id="inaccurate_incorrect" aria-disabled="false" class="r1pyaok7 dir dir-ltr">
                     <label for="inaccurate_incorrect-row-radio-button" class="cursor-pointer">
                       <div class="flex">
