--- a/edit/about.html
+++ b/edit/about.html
@@ -988,5 +988,5 @@ Hello! My name is Jose and I am from the Philippines! It is a pleasure to host t
     </div>
     <div dir="ltr"><div class="_56lpy0"></div></div>
   </body>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
