--- a/submission/basic.html
+++ b/submission/basic.html
@@ -2557,7 +2557,7 @@
       crossorigin="anonymous"
     ></script>
   </body>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
   <script>
     const active = function callbackActive() {
       console.log('dasdas');
