--- a/submission/booking.html
+++ b/submission/booking.html
@@ -1500,5 +1500,5 @@
       <iframe style="display: none"></iframe>
     </div>
   </body>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
