--- a/submission/exp_type.html
+++ b/submission/exp_type.html
@@ -1183,5 +1183,5 @@
       <iframe style="display: none"></iframe>
     </div>
   </body>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
