--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -2012,5 +2012,5 @@
       <iframe style="display: none"></iframe>
     </div>
   </body>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
