--- a/submission/overview.html
+++ b/submission/overview.html
@@ -1182,5 +1182,5 @@
       <iframe style="display: none"></iframe>
     </div>
   </body>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
