--- a/submission/photo-upload.html
+++ b/submission/photo-upload.html
@@ -1322,5 +1322,5 @@
       <iframe style="display: none"></iframe>
     </div>
   </body>
-  <script src="../assets/js/pages/manage-listing.js"></script>
+  <script src="../assets/js/components.js"></script>  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
