rename same properties

--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -2741,7 +2741,7 @@
                                           <div data-plugin-in-point-id="HIGHLIGHTS_LUXE"
                                             data-section-id="HIGHLIGHTS_LUXE"
                                             style="padding-top: 32px; padding-bottom: 24px;">
-                                            <div class="_1ynbv25">
+                                            <div class="block">
                                               <div style="--spacingBottom: 0;" class="products-container__header-text-pb dir dir-ltr">
                                                 <div class="calendar-dropdown__title dir dir-ltr">
                                                   <section>
@@ -15845,7 +15845,7 @@
                                                     </section>
                                                   </div>
                                                 </div>
-                                                <div class="_1ynbv25">
+                                                <div class="block">
                                                   <div class="_6htn2u">
                                                     <div class="_1ssk74kh">
                                                       <div style="margin-top: 0px; margin-bottom: 0px;">
