--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -12177,7 +12177,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="_1ynbv25"></div>
+                <div class="block"></div>
               </div>
             </div>
             <div
@@ -13242,7 +13242,7 @@
                 </div>
                 <div class="_1lplc7"></div>
                 <div class="m12aegvk dir dir-ltr">
-                  <div class="_1ynbv25">
+                  <div class="block">
                     <div class="flex-before-after dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
                         <div
@@ -13445,7 +13445,7 @@
                             --dls19-brand-color: var(--gray-900);
                           "
                         >
-                          <div class="_1ynbv25">
+                          <div class="block">
                             <div class="flex-before-after dir dir-ltr">
                               <div style="--gp-section-max-width: 1120px">
                                 <div
