--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -36,7 +36,7 @@
                               <main id="site-content">
                                 <form>
                                   <div tabindex="-1">
-                                    <div class="_1ynbv25">
+                                    <div class="block">
                                       <div
                                         class="flex-before-after dir dir-ltr"
                                         style=""
