--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -19829,7 +19829,7 @@
               </div>
               <div class="_1lplc7"></div>
               <div class="m12aegvk dir dir-ltr">
-                <div class="_1ynbv25">
+                <div class="block">
                   <div class="flex-before-after dir dir-ltr">
                     <div style="--gp-section-max-width: 1120px">
                       <div data-plugin-in-point-id="AIRCOVER_LEARN_MORE_MODAL"
@@ -19972,7 +19972,7 @@
                                 display: contents;
                                 --dls19-brand-color: var(--gray-900);
                               ">
-                        <div class="_1ynbv25">
+                        <div class="block">
                           <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div data-plugin-in-point-id="DESCRIPTION_MODAL" data-section-id="DESCRIPTION_MODAL"
