--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -894,7 +894,7 @@
                                                                   class="t1x7kc86 dir dir-ltr"
                                                                 >
                                                                   <span
-                                                                    class="_y9cbsa"
+                                                                    class="mobile-banner__text"
                                                                     style="
                                                                       --tl-color: #222222;
                                                                       --tl-font-size: 26px;
@@ -1334,7 +1334,7 @@
                                     <div>
                                       <span class="t1wc0j5d dir dir-ltr">
                                         <span
-                                          class="_y9cbsa"
+                                          class="mobile-banner__text"
                                           style="
                                             --tl-color: #222222;
                                             --tl-font-size: 14px;
@@ -2169,7 +2169,7 @@
                                                             class="t1x7kc86 dir dir-ltr"
                                                           >
                                                             <span
-                                                              class="_y9cbsa"
+                                                              class="mobile-banner__text"
                                                               style="
                                                                 --tl-color: #222222;
                                                                 --tl-font-size: 26px;
