--- a/resource-center/resources.html
+++ b/resource-center/resources.html
@@ -3655,7 +3655,7 @@
                                       </div>
                                     </div>
                                     <div class="tab__content-visibility">
-                                      <div class="_goqbqk">
+                                      <div class="mobile-banner__text-wrapper">
                                         <span class="page-shell-mobile__container-text" style="
                                             --tl-font-size: 18px;
                                             --tl-font-weight: 600;
@@ -3700,7 +3700,7 @@
                                       </div>
                                     </div>
                                     <div class="tab__content-visibility">
-                                      <div class="_goqbqk">
+                                      <div class="mobile-banner__text-wrapper">
                                         <span class="page-shell-mobile__container-text" style="
                                             --tl-font-size: 18px;
                                             --tl-font-weight: 600;
