--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -439,7 +439,7 @@
                                       class="h1i0omnt dir dir-ltr"
                                     >
                                       <span
-                                        class="_expepa"
+                                        class="heading-lg"
                                         style="
                                           --tl-color: #222222;
                                           --tl-font-size: 26px;
@@ -1241,7 +1241,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                   class="h1i0omnt dir dir-ltr"
                                 >
                                   <span
-                                    class="_expepa"
+                                    class="heading-lg"
                                     style="
                                       --tl-color: #222222;
                                       --tl-font-size: 32px;
