--- a/edit/about.html
+++ b/edit/about.html
@@ -436,7 +436,7 @@
                                       class="h1i0omnt dir dir-ltr"
                                     >
                                       <span
-                                        class="_expepa"
+                                        class="heading-lg"
                                         style="
                                           --tl-color: #222222;
                                           --tl-font-size: 26px;
@@ -487,7 +487,7 @@
                                               class="h1i0omnt dir dir-ltr"
                                             >
                                               <span
-                                                class="_expepa"
+                                                class="heading-lg"
                                                 style="
                                                   --tl-color: #222222;
                                                   --tl-font-size: 22px;
@@ -716,7 +716,7 @@ Hello! My name is Jose and I am from the Philippines! It is a pleasure to host t
                                   class="h1i0omnt dir dir-ltr"
                                 >
                                   <span
-                                    class="_expepa"
+                                    class="heading-lg"
                                     style="
                                       --tl-color: #222222;
                                       --tl-font-size: 32px;
@@ -754,7 +754,7 @@ Hello! My name is Jose and I am from the Philippines! It is a pleasure to host t
                                           class="h1i0omnt dir dir-ltr"
                                         >
                                           <span
-                                            class="_expepa"
+                                            class="heading-lg"
                                             style="
                                               --tl-color: #222222;
                                               --tl-font-size: 22px;
