--- a/edit/photos.html
+++ b/edit/photos.html
@@ -263,7 +263,7 @@
                                 <div data-plugin-in-point-id="HEADING_COMPACT" data-section-id="HEADING_COMPACT"
                                   style="padding-top: 12px">
                                   <h1 data-shared-element-id="page-marquee" class="h1i0omnt dir dir-ltr">
-                                    <span class="_expepa" style="
+                                    <span class="heading-lg" style="
                                           --tl-color: #222222;
                                           --tl-font-size: 26px;
                                           --tl-font-weight: 600;
@@ -309,7 +309,7 @@
                                 <div data-plugin-in-point-id="COVER_HEADING" data-section-id="COVER_HEADING"
                                   style="padding-top: 16px">
                                   <h2 data-shared-element-id="page-marquee" class="h1i0omnt dir dir-ltr">
-                                    <span class="_expepa" style="
+                                    <span class="heading-lg" style="
                                           --tl-color: #222222;
                                           --tl-font-size: 18px;
                                           --tl-font-weight: 600;
@@ -468,7 +468,7 @@
                                 <div data-plugin-in-point-id="GALLERY_HEADING" data-section-id="GALLERY_HEADING"
                                   style="padding-top: 32px">
                                   <h2 data-shared-element-id="page-marquee" class="h1i0omnt dir dir-ltr">
-                                    <span class="_expepa" style="
+                                    <span class="heading-lg" style="
                                           --tl-color: #222222;
                                           --tl-font-size: 18px;
                                           --tl-font-weight: 600;
@@ -1772,7 +1772,7 @@
                             <div data-plugin-in-point-id="HEADING_WIDE" data-section-id="HEADING_WIDE"
                               style="padding-top: 12px">
                               <h1 data-shared-element-id="page-marquee" class="h1i0omnt dir dir-ltr">
-                                <span class="_expepa" style="
+                                <span class="heading-lg" style="
                                       --tl-color: #222222;
                                       --tl-font-size: 32px;
                                       --tl-font-weight: 600;
@@ -1808,7 +1808,7 @@
                             <div data-plugin-in-point-id="COVER_HEADING" data-section-id="COVER_HEADING"
                               style="padding-top: 16px">
                               <h2 data-shared-element-id="page-marquee" class="h1i0omnt dir dir-ltr">
-                                <span class="_expepa" style="
+                                <span class="heading-lg" style="
                                       --tl-color: #222222;
                                       --tl-font-size: 18px;
                                       --tl-font-weight: 600;
@@ -1949,7 +1949,7 @@
                             <div data-plugin-in-point-id="GALLERY_HEADING" data-section-id="GALLERY_HEADING"
                               style="padding-top: 32px">
                               <h2 data-shared-element-id="page-marquee" class="h1i0omnt dir dir-ltr">
-                                <span class="_expepa" style="
+                                <span class="heading-lg" style="
                                       --tl-color: #222222;
                                       --tl-font-size: 18px;
                                       --tl-font-weight: 600;
