--- a/online-experience/insights.html
+++ b/online-experience/insights.html
@@ -253,7 +253,7 @@
                                 class="h1i0omnt dir dir-ltr"
                               >
                                 <span
-                                  class="_expepa"
+                                  class="heading-lg"
                                   style="
                                     --tl-color: #222222;
                                     --tl-font-size: 32px;
@@ -1704,7 +1704,7 @@
                                 class="h1i0omnt dir dir-ltr"
                               >
                                 <span
-                                  class="_expepa"
+                                  class="heading-lg"
                                   style="
                                     --tl-color: #222222;
                                     --tl-font-size: 32px;
