--- a/edit/bring.html
+++ b/edit/bring.html
@@ -438,7 +438,7 @@
                                       class="h1i0omnt dir dir-ltr"
                                     >
                                       <span
-                                        class="_expepa"
+                                        class="heading-lg"
                                         style="
                                           --tl-color: #222222;
                                           --tl-font-size: 26px;
@@ -969,7 +969,7 @@
                                   class="h1i0omnt dir dir-ltr"
                                 >
                                   <span
-                                    class="_expepa"
+                                    class="heading-lg"
                                     style="
                                       --tl-color: #222222;
                                       --tl-font-size: 32px;
