--- a/edit/title.html
+++ b/edit/title.html
@@ -433,7 +433,7 @@
                                       class="h1i0omnt dir dir-ltr"
                                     >
                                       <span
-                                        class="_expepa"
+                                        class="heading-lg"
                                         style="
                                           --tl-color: #222222;
                                           --tl-font-size: 26px;
@@ -585,7 +585,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
                                   class="h1i0omnt dir dir-ltr"
                                 >
                                   <span
-                                    class="_expepa"
+                                    class="heading-lg"
                                     style="
                                       --tl-color: #222222;
                                       --tl-font-size: 32px;
