--- a/edit/what.html
+++ b/edit/what.html
@@ -433,7 +433,7 @@
                                       class="h1i0omnt dir dir-ltr"
                                     >
                                       <span
-                                        class="_expepa"
+                                        class="heading-lg"
                                         style="
                                           --tl-color: #222222;
                                           --tl-font-size: 26px;
@@ -1020,7 +1020,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                   class="h1i0omnt dir dir-ltr"
                                 >
                                   <span
-                                    class="_expepa"
+                                    class="heading-lg"
                                     style="
                                       --tl-color: #222222;
                                       --tl-font-size: 32px;
